# poetrybot

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  README.rst  justfile  pyproject.toml
.woodpecker/: test.yml
docs/: openapi.yml
extra/: entrypoint.sh
src/poetrybot/: config.py  main.py
src/poetrybot/database/: __init__.py  api.py  models.py
src/poetrybot/telegram/: bot.py
src/poetrybot/telegram/commands/: quote.py
src/poetrybot/web/: application.py  wsgi.py
src/poetrybot/web/poems/: routes.py
src/poetrybot/web/poets/: __init__.py  routes.py
src/poetrybot/web/users/: routes.py  schemas.py
tests/: test_database_api.py  test_models.py  test_poetrybot.py  test_store.py
tests/database/: test_database_api.py  test_models.py
tests/telegram/: test_quote.py
tests/web/: conftest.py  test_poems.py  test_poet.py  test_poets.py  test_users.py
