[tool.poetry]
name = "poetrybot"
version = "0.1.0"
description = ""
authors = ["Daniele Tricoli <eriol@mornie.org>"]

[tool.poetry.dependencies]
python = "^3.9"
python-telegram-bot = "^13.3"
environ-config = "^20.1.0"
SQLAlchemy = "^1.3.23"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
